src/test/deca/context/invalid/tests/CLASS-already-defined.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 15: Double définition
// 
// Historique:
//    cree le 01/01/2022


class Test {

}

class Test {

}


